--- a/src/main/resources/static/Pagina1.html
+++ b/src/main/resources/static/Pagina1.html
@@ -1,15 +1,31 @@
-<!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
+
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>AutosAlex</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body>
-        <div>TODO write content</div>
+     <body>
+       <div style="color: red;text-align: center;">
+        <h1>Autos Alex</h1>
+        <p><i>Bienvenidos al mundo de los autos deportivos</i></p>
+        <br>
+       </div>
+       <a href=Pagina2.html">Siguiente</a> 
+       <div style="text-align: left;">
+           
+        <h4>Pagina Informativa</h4>
+        <p><i><strong>¿Que es un auto deportivo?</strong></i></p>
+        <p>Un deportivo es, por lo general, un coche pequeño y bajo para dos pasajeros que ofrece una respuesta rápida, puede circular a altas velocidades y está diseñado para ser conducido en la vía pública.</p>
+        <p><i><strong>Caracteristicas de un auto deportivo</i></strong></p>
+        <p>Tienen mejor aceleración, velocidad máxima, adherencia al asfalto, mejor sistema de frenado y una mayor potencia que otros coches convencionales, lo que se logra mediante motores, frenos, suspensión, caja de cambios, neumáticos, chasis y tipo de carrocería especiales</p>
+        <p><i><strong>Descripcion de un auto deportivo</i></strong></p>
+        <p>Los autos que pertenecen a este segmento cuentan con un tratamiento especial en diferentes puntos de la carrocería, empezando por la suspensión, en los frenos, algunos con una altura al piso reducida, ajustes en la dirección y por supuesto un diseño aerodinámico el cual juega un papel importante en su desempeño.</p>
+       </div>
+        
+        <br>
+        <br>
+        <br>
+        <p><u>Infomacion Clasificada</u></p>
     </body>
 </html>
